调节子项目

--- a/p-conf-server/pom.xml
+++ b/p-conf-server/pom.xml
@@ -15,5 +15,11 @@
 			<artifactId>p-conf-api</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.xiaotiangege</groupId>
+			<artifactId>p-conf-zkutils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
