--- a/p-conf-server/pom.xml
+++ b/p-conf-server/pom.xml
@@ -9,6 +9,15 @@
 	</parent>
 	<artifactId>p-conf-server</artifactId>
 
+	<properties>
+		<mybatis.spring.boot.version>1.3.1</mybatis.spring.boot.version>
+		<mybatis.generator.plugin.version>1.3.5</mybatis.generator.plugin.version>
+		<pagehelper.spring.boot.version>1.2.3</pagehelper.spring.boot.version>
+		<tk.mybatis.spring.boot.version>1.2.3</tk.mybatis.spring.boot.version>
+		<mysql.version>5.1.45</mysql.version>
+		<druid.spring.boot.version>1.1.6</druid.spring.boot.version>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.xiaotiangege</groupId>
@@ -21,5 +30,83 @@
 			<artifactId>p-conf-zkutils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mybatis.spring.boot</groupId>
+			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>${mybatis.spring.boot.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid.spring.boot.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>${pagehelper.spring.boot.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>tk.mybatis</groupId>
+			<artifactId>mapper-spring-boot-starter</artifactId>
+			<version>${tk.mybatis.spring.boot.version}</version>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<excludes>
+					<exclude>generatorConfig.xml</exclude>
+				</excludes>
+			</resource>
+		</resources>
+		<!-- <plugins>
+                <plugin>
+                    <groupId>org.mybatis.generator</groupId>
+                    <artifactId>mybatis-generator-maven-plugin</artifactId>
+                    <configuration>
+                        &lt;!&ndash; 在控制台打印执行日志 &ndash;&gt;
+                        <verbose>true</verbose>
+                        &lt;!&ndash; 重复生成时会覆盖之前的文件&ndash;&gt;
+                        <overwrite>true</overwrite>
+                        <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>Generate MyBatis Artifacts</id>
+                            <goals>
+                                <goal>generate</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <dependencies>
+                        <dependency>
+                            <groupId>mysql</groupId>
+                            <artifactId>mysql-connector-java</artifactId>
+                            <version>5.1.43</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>tk.mybatis</groupId>
+                            <artifactId>mapper</artifactId>
+                            <version>3.5.2</version>
+                        </dependency>
+                    </dependencies>
+                </plugin>
+            </plugins>-->
+	</build>
 </project>
